; ModuleID = '/home/carl/AnghaBench/libgit2/tests/remote/extr_create.c_test_remote_create__anonymous.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/remote/extr_create.c_test_remote_create__anonymous.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"remote\\.\00", align 1
@TEST_URL = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_remote_create__anonymous() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca %struct.TYPE_4__, align 8
  %3 = alloca i64, align 8
  %4 = load i32, i32* @_repo, align 4
  %5 = call i64 @count_config_entries_match(i32 %4, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  store i64 %5, i64* %3, align 8
  %6 = load i32, i32* @_repo, align 4
  %7 = load i32*, i32** @TEST_URL, align 8
  %8 = call i32 @git_remote_create_anonymous(i32** %1, i32 %6, i32* %7)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32*, i32** %1, align 8
  %11 = call i32 @git_remote_name(i32* %10)
  %12 = call i32 @cl_assert_equal_s(i32 %11, i32* null)
  %13 = load i32*, i32** %1, align 8
  %14 = call i32 @git_remote_url(i32* %13)
  %15 = load i32*, i32** @TEST_URL, align 8
  %16 = call i32 @cl_assert_equal_s(i32 %14, i32* %15)
  %17 = load i32*, i32** %1, align 8
  %18 = call i32 @git_remote_owner(i32* %17)
  %19 = load i32, i32* @_repo, align 4
  %20 = call i32 @cl_assert_equal_p(i32 %18, i32 %19)
  %21 = load i32*, i32** %1, align 8
  %22 = call i32 @git_remote_get_fetch_refspecs(%struct.TYPE_4__* %2, i32* %21)
  %23 = call i32 @cl_git_pass(i32 %22)
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @cl_assert_equal_i(i64 0, i64 %25)
  %27 = load i64, i64* %3, align 8
  %28 = load i32, i32* @_repo, align 4
  %29 = call i64 @count_config_entries_match(i32 %28, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %30 = call i32 @cl_assert_equal_i(i64 %27, i64 %29)
  %31 = call i32 @git_strarray_free(%struct.TYPE_4__* %2)
  %32 = load i32*, i32** %1, align 8
  %33 = call i32 @git_remote_free(i32* %32)
  ret void
}

declare dso_local i64 @count_config_entries_match(i32, i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_remote_create_anonymous(i32**, i32, i32*) #1

declare dso_local i32 @cl_assert_equal_s(i32, i32*) #1

declare dso_local i32 @git_remote_name(i32*) #1

declare dso_local i32 @git_remote_url(i32*) #1

declare dso_local i32 @cl_assert_equal_p(i32, i32) #1

declare dso_local i32 @git_remote_owner(i32*) #1

declare dso_local i32 @git_remote_get_fetch_refspecs(%struct.TYPE_4__*, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i64, i64) #1

declare dso_local i32 @git_strarray_free(%struct.TYPE_4__*) #1

declare dso_local i32 @git_remote_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
